--- a/styles.css
+++ b/styles.css
@@ -865,6 +865,43 @@ main::before {
   background-color: #434343;
 }
 
+.pinterest-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.pinterest-text {
+  font-family: "LexendLight";
+  position: relative;
+  max-width: 70%;
+  background-color: #1f1f1f;
+  color: #f8f8f8;
+  padding: 20px;
+  border-radius: 14px;
+}
+
+.pinterest-wrap a {
+  text-decoration: none;
+  color: #ffa41c;
+}
+
+.ball {
+  position: absolute;
+  background-color: #ffa41c;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  top: -35px;
+  left: 0;
+  animation: 1.5s infinite alternate roll;
+}
+
+@keyframes roll {
+  to {
+    left: calc(100% - 30px);
+  }
+}
+
 footer {
   margin-top: 50px;
   background-color: var(--light);
